syntax = "proto3";

package greet.v1;

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string greeting = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
}
